# freeband

./: .clang-format  .wiswa.jsonnet  AUTHORS  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  ChangeLog  Doxyfile.in  Freeband.dev  Freeband_private.h  Freeband_private.rc  Freeband_private.res  INSTALL  Makefile  Makefile.am  Makefile.in  Makefile.win  NEWS  README  README.md  config.h.in  configure  configure.ac  note_process.dia  note_process.dia~  package.json  vcpkg.json
.github/workflows/: cmake.yml  codeql.yml
defaults/languages/: en_GB.ini  pl_PL.ini
defaults/themes/default/: metrics.ini
defaults/themes/default/global/: buttons.xcf
defaults/themes/default/screenGame/: button.xcf  loop_a.xcf
songs/Freeband/Dummy/: dummy.xml
src/: CMakeLists.txt  Makefile.am  Makefile.in  README  error.c  error.h  freeband  freeband.c  freeband.c~  freeband.h  freeband.h~  gameloop.dia  licences.txt  nonstd.c  nonstd.h  quickbuild.sh  scrap.txt  scrap.txt~  startup.c
src/GameData/: default-data  preferences.ini
src/GameData/languages/: en_GB.ini  pl_PL.ini
src/GameData/themes/default/: metrics.ini
src/GameData/themes/default/global/: screenbottom_bg.xcf
src/GameData/themes/default/screenInstruments/: canvas.xcf
src/audio/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  audio.c  audio.c~  audio.h  audio.h~  nonfree_codecs.c  ogg.c  ogg.c~  ogg.h  ogg.h~  sfx.c  sfx.h  sfx.h~  track.c  track.c~  track.h  track.h~
src/graphics/: 2d_main.c  2d_old.c  CMakeLists.txt  Makefile.am  Makefile.in  graphics.c  graphics.c~  graphics.h  graphics.h~  main.c  text.c  text.h  text.h~
src/input/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  input.c  input.c~  input.h  input.h~  screenDifficulty.c  screenDifficulty.c~  screenDifficulty.h  screenDifficulty.h~  screenGame.c  screenGame.h  screenInstruments.c  screenInstruments.c~  screenInstruments.h  screenInstruments.h~  screenMain.c  screenMain.c~  screenMain.h  screenPause.c  screenPause.h  screenSongs.c  screenSongs.c~  screenSongs.h
src/io/: CMakeLists.txt  Makefile.am  Makefile.in  defaults.c  defaults.c~  defaults.h  dictionary.c  dictionary.h  dummy.xml  dummy.xml~  example2.c  fbnotes.dtd  fbprefs.dtd  fileio.c  fileio.h  iniparser.c  iniparser.h  joypad.h  keys.c  keys.h  languages.c  languages.h  preferences.xml  prefs.c  prefs.h  readprefs.c  themes.c  themes.c~  themes.h  themes.h~  unix2dos.h  xml.c  xmlexample.c
src/modes/: loading.c
src/screens/: CMakeLists.txt  Makefile.am  Makefile.in  demo.c  difficulty.c  difficulty.c~  difficulty.h  difficulty.h~  game.c  game.c~  game.h  game.h~  general.h  general.h~  instruments.c  instruments.c~  instruments.h  instruments.h~  main.c  main.c~  main.h  main.h~  menus.c  menus.c~  multiplayer.c  multiplayer.h  online.c  options.c  pause.c  pause.h  pause.h~  songlist.c  songlist.h  songs.c  songs.c~  songs.h  songs.h~  start.c  start.c~  start.h  (+1 more)
src/testmenu/: main_menu  main_menu.c  main_menu.c~
src/tests/: click.aif  metronome-click
src/time/: metronome  metronome-click.c  metronome.c
src/trunk/: README  freeband  freeband.c
src/trunk/screens/: start.c
test/portoggio/: portogg  portogg.c  portogg.c~  portogg.h  portogg.h~  splayer.c
win32/: Freeband_private.res  freeband.exe.Manifest
